sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:4: error: not found: value estSelectionne
var blabla=estSelectionne()
           ^BasicPancake:17: error: not found: value rang
	retourne(rang) 
                 ^